# vera

./: README.md
builtin_plugins/vera_google_sheets_report/: README.md  pyproject.toml
builtin_plugins/vera_google_sheets_report/tests/test_vera_google_sheets_report/: test_plugin.py
docs/: installation_and_usage.md
plugin_example/sql_query_assistant/: pyproject.toml
plugin_example/vera_sql_query_assistant/: pyproject.toml
plugin_example/vera_sql_query_assistant/tests/test_vera_sql_query_assistant/: test_sql_assistant.py
vera/: pyproject.toml
vera/src/vera/core/: configuration.py  default_impl.py  gemini.py  hook_specs.py  utils.py
vera/src/vera/core/data_models/: llm_sdk.py
vera/src/vera/create/: plugin_template.py
vera/src/vera/create/plugin_name/: pyproject.toml
vera/src/vera/create/plugin_name/src/plugin_name/: plugin_impl.py
vera/src/vera/create/plugin_name/src/plugin_name/core/: data_models.py  plugin_name.py  static_tests.py
vera/src/vera/create/plugin_name/src/plugin_name/feature_tests/resources/: README.md
vera/src/vera/logger/: setup_logging.py
vera/src/vera/vtest/: typer_app.py  vtest.py  vtest_summary.py
vera/tests/test_vera/: test_config.py
vera/tests/test_vera/test_core/: test_data_models.py  test_utils.py  test_write_results_to_file.py
vera/tests/test_vera/test_vera_test/: test_evaluate.py
