[project]
name = "vera"
version = "1.0.4"
description = "Powerful AI Test Engine for Features"
readme = "README.md"
authors = [
    { name = "Tal Shapir", email = "talshapir@google.com" },
]
requires-python = ">=3.14"
license-files = ["LICENSE"]
license = "Apache-2.0"
dependencies = [
    "anyio>=4.12.1",
    "google-genai>=1.64.0",
    "platformdirs>=4.9.2",
    "pluggy>=1.6.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]
keywords = [
    "vera",
    "google",
    "ai",
    "testing",
    "regression testing",
    "plugin",
    "test",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/google/vera"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[project.scripts]
vera = "vera.main:main"

[build-system]
requires = ["uv_build>=0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = "src"
norecursedirs = ["src/vera/create/plugin_name"]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests/",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
